--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -1,103 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:300,400,500,600,700|Roboto:300i,300,400,500,700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300i,300,400,500,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Module-6</title>
 </head>
-
 <body>
     <header class="header">
         <div class="container">
             <nav class="navigation">
-                <a href="#" class="logo">MoGo</a>
-                <ul class="nav-list">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Service</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Work</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+            <a href="" class="logo">MoGo</a>
+
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a href="" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Service</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Work</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     </header>
     <main class="main">
-        <section class="services">
-            <div class="container">
-                <p class="section-subtitle">We work with</p>
-                <h2 class="section-title">Amazing services</h2>
-                <ul class="services-list">
-                    <li class="services-list-item">
-                        <h3 class="services-list-item-title">Photography</h3>
-                        <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                            do eiusmod
-                            tempor.</p>
-                    </li>
-                    <li class="services-list-item">
-                        <h3 class="services-list-item-title">Web design</h3>
-                        <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                            do eiusmod
-                            tempor.</p>
-                    </li>
-                    <li class="services-list-item">
-                        <h3 class="services-list-item-title">Creativity</h3>
-                        <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                            do eiusmod
-                            tempor.</p>
-                    </li>
-                    <li class="services-list-item">
-                        <h3 class="services-list-item-title">Seo</h3>
-                        <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                            do eiusmod
-                            tempor.</p>
-                    </li>
-                    <li class="services-list-item">
-                        <h3 class="services-list-item-title">css/html</h3>
-                        <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                            do eiusmod
-                            tempor.</p>
-                    </li>
-                    <li class="services-list-item">
-                        <h3 class="services-list-item-title">Ditital</h3>
-                        <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                            do eiusmod
-                            tempor.</p>
-                    </li>
-                </ul>
-            </div>
+        <section class="section-service">
+        <div class="container">
+            <p class="title-first-line">We work with</p>
+            <h2 class="title-second-line">Amazing services</h2>
+
+            <ul class="service-list">
+                <li class="service-item">
+                    <p class="service-title">Photography</p>
+                    <p class="service-subtitle">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                    </p>
+                </li>
+                <li class="service-item">
+                    <p class="service-title">Web Design</p>
+                    <p class="service-subtitle">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                    </p>
+                </li>
+                <li class="service-item">
+                    <p class="service-title">Creativity</p>
+                    <p class="service-subtitle">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                    </p>
+                </li>
+                <li class="service-item">
+                    <p class="service-title">seo</p>
+                    <p class="service-subtitle">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                    </p>
+                </li>
+                <li class="service-item">
+                    <p class="service-title">Css/Html</p>
+                    <p class="service-subtitle">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                    </p>
+                </li>
+                <li class="service-item">
+                    <p class="service-title">digital</p>
+                    <p class="service-subtitle">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                    </p>
+                </li>
+            </ul>
+        </div>
         </section>
         <section class="section-team">
-            <div class="container">
-                <p class="section-subtitle">Who we are</p>
-                <h2 class="section-title line2">Meet our team</h2>
-                <p class="team-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut
-                    aliquip ex ea commodo consequat.</p>
-                <ul class="team-list">
-                    <li class="social-item">
-                    <img src="/img/pictures/Rectangle-1.jpg" alt="Photo1" width="380" height="470">
-                    <span class="team-name">Matthew Dix</span>
-                    <span class="team-position">Graphic Design</span>
+        <div class="container">
+            <p class="title-first-line">Who we are</p>
+            <h2 class="title-second-line">Meet our team</h2>
+            <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+
+            <ul class="team-list">
+             <li class="team-item">
+                            <img src="img/pictures/Rectangle-1.jpg" width="380" height="470" alt="Team1">
+                            <span class="team-name">Matthew Dix</span>
+                            <span class="team-position">Graphic Design</span>
                     <div class="team-card">
+                            <ul class="social-list">
+                                <li class="social-item">
+                                    <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb" class="social-img"></a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="social-link"><img src="img/icons/twitter-2.png" alt="Tw" class="social-img"></a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="social-link"><img src="img/icons/pinterest-3.png" alt="Pnt" class="social-img"></a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="social-link"><img src="img/icons/instagram-4.png" alt="Ins" class="social-img"></a>
+                                </li>
+                            </ul>
+                        </div>
+            </li>
+            <li class="team-item">
+                        <img src="img/pictures/camera-2.jpg" width="380" height="470" alt="Team1">
+                        <span class="team-name">Christopher Campbell</span>
+                        <span class="team-position">Branding/UX design</span>
+                <div class="team-card">
                         <ul class="social-list">
                             <li class="social-item">
                                 <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb" class="social-img"></a>
@@ -113,51 +131,30 @@
                             </li>
                         </ul>
                     </div>
-                    </li>
-                    <li class="social-item">
-                        <img src="/img/pictures/camera-2.jpg" alt="Photo1" width="380" height="470">
-                    <span class="team-name">Matthew Dix</span>
-                    <span class="team-position">Graphic Design</span>
-                    <div class="team-card">
-                        <ul class="social-list">
-                            <li class="social-item">
-                                <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb" class="social-img"></a>
-                            </li>
-                            <li class="social-item">
-                                <a href="" class="social-link"><img src="img/icons/twitter-2.png" alt="Tw" class="social-img"></a>
-                            </li>
-                            <li class="social-item">
-                                <a href="" class="social-link"><img src="img/icons/pinterest-3.png" alt="Pnt" class="social-img"></a>
-                            </li>
-                            <li class="social-item">
-                                <a href="" class="social-link"><img src="img/icons/instagram-4.png" alt="Ins" class="social-img"></a>
-                            </li>
-                        </ul>
-                    </div>
-                    </li>
-                    <li class="social-item">
-                        <img src="/img/pictures/Rectangle-1.jpg" alt="Photo1" width="380" height="470">
-                    <span class="team-name">Matthew Dix</span>
-                    <span class="team-position">Graphic Design</span>
-                    <div class="team-card">
-                        <ul class="social-list">
-                            <li class="social-item">
-                                <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb" class="social-img"></a>
-                            </li>
-                            <li class="social-item">
-                                <a href="" class="social-link"><img src="img/icons/twitter-2.png" alt="Tw" class="social-img"></a>
-                            </li>
-                            <li class="social-item">
-                                <a href="" class="social-link"><img src="img/icons/pinterest-3.png" alt="Pnt" class="social-img"></a>
-                            </li>
-                            <li class="social-item">
-                                <a href="" class="social-link"><img src="img/icons/instagram-4.png" alt="Ins" class="social-img"></a>
-                            </li>
-                        </ul>
-                    </div>
-                    </li>
-                </ul>
-            </div>
+            </li>
+            <li class="team-item">
+                    <img src="img/pictures/bred-3.jpg" width="380" height="470" alt="Team1">
+                    <span class="team-name">Michael Fertig</span>
+                    <span class="team-position">Developer</span>
+            <div class="team-card">
+                    <ul class="social-list">
+                        <li class="social-item">
+                            <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb" class="social-img"></a>
+                        </li>
+                        <li class="social-item">
+                            <a href="" class="social-link"><img src="img/icons/twitter-2.png" alt="Tw" class="social-img"></a>
+                        </li>
+                        <li class="social-item">
+                            <a href="" class="social-link"><img src="img/icons/pinterest-3.png" alt="Pnt" class="social-img"></a>
+                        </li>
+                        <li class="social-item">
+                            <a href="" class="social-link"><img src="img/icons/instagram-4.png" alt="Ins" class="social-img"></a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            </ul>
+        </div>
         </section>
     </main>
     <footer class="footer container">
@@ -170,5 +167,3 @@
     </footer>
 </body>
 </html>
-
-
