--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,150 +12,165 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Module-6</title>
 </head>
+
 <body>
     <header class="header">
         <div class="container">
             <nav class="navigation">
-            <a href="" class="logo">MoGo</a>
+                <a href="" class="logo">MoGo</a>
 
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a href="" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">Service</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">Work</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Service</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main class="main">
         <section class="section-service">
-        <div class="container">
-            <p class="title-first-line">We work with</p>
-            <h2 class="title-second-line">Amazing services</h2>
+            <div class="container">
+                <p class="title-first-line">We work with</p>
+                <h2 class="title-second-line">Amazing services</h2>
 
-            <ul class="service-list">
-                <li class="service-item">
-                    <p class="service-title">Photography</p>
-                    <p class="service-subtitle">
+                <ul class="service-list">
+                    <li class="service-item">
+                        <p class="service-title">Photography</p>
+                        <p class="service-subtitle">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-                    </p>
-                </li>
-                <li class="service-item">
-                    <p class="service-title">Web Design</p>
-                    <p class="service-subtitle">
+                        </p>
+                    </li>
+                    <li class="service-item">
+                        <p class="service-title">Web Design</p>
+                        <p class="service-subtitle">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-                    </p>
-                </li>
-                <li class="service-item">
-                    <p class="service-title">Creativity</p>
-                    <p class="service-subtitle">
+                        </p>
+                    </li>
+                    <li class="service-item">
+                        <p class="service-title">Creativity</p>
+                        <p class="service-subtitle">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-                    </p>
-                </li>
-                <li class="service-item">
-                    <p class="service-title">seo</p>
-                    <p class="service-subtitle">
+                        </p>
+                    </li>
+                    <li class="service-item">
+                        <p class="service-title">seo</p>
+                        <p class="service-subtitle">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-                    </p>
-                </li>
-                <li class="service-item">
-                    <p class="service-title">Css/Html</p>
-                    <p class="service-subtitle">
+                        </p>
+                    </li>
+                    <li class="service-item">
+                        <p class="service-title">Css/Html</p>
+                        <p class="service-subtitle">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-                    </p>
-                </li>
-                <li class="service-item">
-                    <p class="service-title">digital</p>
-                    <p class="service-subtitle">
+                        </p>
+                    </li>
+                    <li class="service-item">
+                        <p class="service-title">digital</p>
+                        <p class="service-subtitle">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-                    </p>
-                </li>
-            </ul>
-        </div>
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="section-team">
-        <div class="container">
-            <p class="title-first-line">Who we are</p>
-            <h2 class="title-second-line">Meet our team</h2>
-            <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <div class="container">
+                <p class="title-first-line">Who we are</p>
+                <h2 class="title-second-line">Meet our team</h2>
+                <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 
-            <ul class="team-list">
-             <li class="team-item">
-                            <img src="img/pictures/Rectangle-1.jpg" width="380" height="470" alt="Team1">
-                            <span class="team-name">Matthew Dix</span>
-                            <span class="team-position">Graphic Design</span>
-                    <div class="team-card">
+                <ul class="team-list">
+                    <li class="team-item">
+                        <img src="img/pictures/Rectangle-1.jpg" width="380" height="470" alt="Team1">
+                        <span class="team-name">Matthew Dix</span>
+                        <span class="team-position">Graphic Design</span>
+                        <div class="team-card">
                             <ul class="social-list">
                                 <li class="social-item">
-                                    <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb" class="social-img"></a>
+                                    <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb"
+                                            class="social-img"></a>
                                 </li>
                                 <li class="social-item">
-                                    <a href="" class="social-link"><img src="img/icons/twitter-2.png" alt="Tw" class="social-img"></a>
+                                    <a href="" class="social-link"><img src="img/icons/twitter-2.png" alt="Tw"
+                                            class="social-img"></a>
                                 </li>
                                 <li class="social-item">
-                                    <a href="" class="social-link"><img src="img/icons/pinterest-3.png" alt="Pnt" class="social-img"></a>
+                                    <a href="" class="social-link"><img src="img/icons/pinterest-3.png" alt="Pnt"
+                                            class="social-img"></a>
                                 </li>
                                 <li class="social-item">
-                                    <a href="" class="social-link"><img src="img/icons/instagram-4.png" alt="Ins" class="social-img"></a>
+                                    <a href="" class="social-link"><img src="img/icons/instagram-4.png" alt="Ins"
+                                            class="social-img"></a>
                                 </li>
                             </ul>
                         </div>
-            </li>
-            <li class="team-item">
+                    </li>
+                    <li class="team-item">
                         <img src="img/pictures/camera-2.jpg" width="380" height="470" alt="Team1">
                         <span class="team-name">Christopher Campbell</span>
                         <span class="team-position">Branding/UX design</span>
-                <div class="team-card">
-                        <ul class="social-list">
-                            <li class="social-item">
-                                <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb" class="social-img"></a>
-                            </li>
-                            <li class="social-item">
-                                <a href="" class="social-link"><img src="img/icons/twitter-2.png" alt="Tw" class="social-img"></a>
-                            </li>
-                            <li class="social-item">
-                                <a href="" class="social-link"><img src="img/icons/pinterest-3.png" alt="Pnt" class="social-img"></a>
-                            </li>
-                            <li class="social-item">
-                                <a href="" class="social-link"><img src="img/icons/instagram-4.png" alt="Ins" class="social-img"></a>
-                            </li>
-                        </ul>
-                    </div>
-            </li>
-            <li class="team-item">
-                    <img src="img/pictures/bred-3.jpg" width="380" height="470" alt="Team1">
-                    <span class="team-name">Michael Fertig</span>
-                    <span class="team-position">Developer</span>
-            <div class="team-card">
-                    <ul class="social-list">
-                        <li class="social-item">
-                            <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb" class="social-img"></a>
-                        </li>
-                        <li class="social-item">
-                            <a href="" class="social-link"><img src="img/icons/twitter-2.png" alt="Tw" class="social-img"></a>
-                        </li>
-                        <li class="social-item">
-                            <a href="" class="social-link"><img src="img/icons/pinterest-3.png" alt="Pnt" class="social-img"></a>
-                        </li>
-                        <li class="social-item">
-                            <a href="" class="social-link"><img src="img/icons/instagram-4.png" alt="Ins" class="social-img"></a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-            </ul>
-        </div>
+                        <div class="team-card">
+                            <ul class="social-list">
+                                <li class="social-item">
+                                    <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb"
+                                            class="social-img"></a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="social-link"><img src="img/icons/twitter-2.png" alt="Tw"
+                                            class="social-img"></a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="social-link"><img src="img/icons/pinterest-3.png" alt="Pnt"
+                                            class="social-img"></a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="social-link"><img src="img/icons/instagram-4.png" alt="Ins"
+                                            class="social-img"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="team-item">
+                        <img src="img/pictures/bred-3.jpg" width="380" height="470" alt="Team1">
+                        <span class="team-name">Michael Fertig</span>
+                        <span class="team-position">Developer</span>
+                        <div class="team-card">
+                            <ul class="social-list">
+                                <li class="social-item">
+                                    <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb"
+                                            class="social-img"></a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="social-link"><img src="img/icons/twitter-2.png" alt="Tw"
+                                            class="social-img"></a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="social-link"><img src="img/icons/pinterest-3.png" alt="Pnt"
+                                            class="social-img"></a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="social-link"><img src="img/icons/instagram-4.png" alt="Ins"
+                                            class="social-img"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer container">
@@ -163,7 +179,8 @@
         <form action="#" class="email-form">
             <input class="email" type="email" name="email" placeholder="Your Email...">
             <input class="submit" type="submit" value="Subscribe">
-          </form>
+        </form>
     </footer>
 </body>
+
 </html>
