--- a/html-css/module-7/index.html
+++ b/html-css/module-7/index.html
@@ -9,6 +9,75 @@
     <title>Module-7</title>
 </head>
 <body>
-    <h1>HI WORLD!</h1>
+    <header class="header">
+        <div class="container">
+            <nav class="navigation">
+                <a href="" class="logo">Golden</a>
+
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main">
+<section class="services">
+        <div class="container">
+<h2 class="services-title">Services</h2>
+<span class="subtitle">Proin iaculis purus consequat sem cure.</span>
+
+<ul class="services__list">
+    <li class="services__list-item">
+        <h3 class="services__list-item-title">E-Commerce</h3>
+        <p class="services__list-item-text">Proin iaculis purus consequat sem cure 
+            digni ssim. Donec porttitora entum suscipit 
+            aenean rhoncus posuere odio in tincidunt.</p>
+    </li>
+    <li class="services__list-item">
+        <h3 class="services__list-item-title">Responsive Web</h3>
+        <p class="services__list-item-text">Proin iaculis purus consequat sem cure 
+            digni ssim. Donec porttitora entum suscipit 
+            aenean rhoncus posuere odio in tincidunt.</p>
+    </li>
+    <li class="services__list-item">
+        <h3 class="services__list-item-title">Web Security</h3>
+        <p class="services__list-item-text">Proin iaculis purus consequat sem cure 
+            digni ssim. Donec porttitora entum suscipit 
+            aenean rhoncus posuere odio in tincidunt.</p>
+    </li>
+</ul>
+</div>
+</section>
+<section class="contact-us">
+     <h2 class="contact-us-title">Contact us</h2>
+    <span class="contact-ussubtitle">Proin iaculis purus consequat sem cure.</span>
+    <div class="forms container">
+        <form action="#" class="contact__form">
+            <input name="name" type="text" class="contact__form-input" placeholder="Your name*" required 
+            minlength="4">
+            <input name="email" type="email" class="contact__form-input" placeholder="Your email*" required>
+            <input name="subject" type="text" class="contact__form-input" placeholder="Subject">
+        </form>
+        <textarea class="contact__form-textarea" name="comment"  cols="30" rows="10" placeholder="Your massage"></textarea>
+        
+    </div>
+    <button class="contact__form-btn">Send message</button>
+
+</section>
+    </main>
 </body>
 </html>
