--- a/html-css/module-7/index.html
+++ b/html-css/module-7/index.html
@@ -9,6 +9,7 @@
     <title>Module-7</title>
 </head>
 <body>
+    <h1 class="visually-hidden">Our amazing pain and gain website</h1>
     <header class="header">
         <div class="container">
             <nav class="navigation">
