--- a/html-css/module-8/index.html
+++ b/html-css/module-8/index.html
@@ -26,5 +26,26 @@
         <button class="find-btn">Find your holiday partner</button>
 </div>
 </header>
+<main class="main"></main>
+
+    <h2 class="second-title">Meet a partner for yourbest holiday</h2>
+<ul class="member-list">
+    <li class="member-item">
+        <img src="../img/mustash-pic.png" alt="mustash" width="121" height="121">
+        <h3 class="name">Bradley Hunter</h3>
+        <p class="text">Based in Chicago. I love playing tennis and loud music.</p>
+    </li>
+    <li class="member-item">
+
+    </li>
+    <li class="member-item">
+
+    </li>
+    <li class="member-item">
+
+    </li>
+</ul>
+
+
 </body>
 </html>
