--- a/html-css/module-8/index.html
+++ b/html-css/module-8/index.html
@@ -12,7 +12,8 @@
     
     <header class="header">
         <div class="container">
-        <ul class="nav">
+        <nav class="navigation">
+            <ul class="nav-list">
             <li class="nav-item">
                 <a href="#" class="nav-link">Log in</a>
             </li>
@@ -21,31 +22,53 @@
             </li>
         </ul>
         <a href="#" class="logo">URLAUBSGLÜCK</a>
-        <h1 class="main-title">Share your holiday dreams</h1>
-        <p class="main-subtitle">And find the perfect partner to fullfill it</p>
+    </nav>
+    <h1 class="header-title">
+        Share your<br />holiday dreams<span class="header-subtitle">And find the perfect partner fullfill it</span>
+      </h1>
         <button class="find-btn">Find your holiday partner</button>
 </div>
 </header>
-<main class="main"></main>
-
-    <h2 class="second-title">Meet a partner for yourbest holiday</h2>
-<ul class="member-list">
-    <li class="member-item">
-        <img src="../img/mustash-pic.png" alt="mustash" width="121" height="121">
-        <h3 class="name">Bradley Hunter</h3>
-        <p class="text">Based in Chicago. I love playing tennis and loud music.</p>
-    </li>
-    <li class="member-item">
-
-    </li>
-    <li class="member-item">
-
-    </li>
-    <li class="member-item">
-
-    </li>
-</ul>
-
+<main class="container">
+    <!-- Section Partners -->
+    <section class="section-partner">
+      <h2 class="section-partner-title">
+        Meet a partner for your best holiday
+      </h2>
+      <ul class="partner-list">
+        <li class="partner-item">
+          <div class="partner-photo partner-photo-first prt-icon-first">
+          </div>
+          <span class="partner-name">Lucas Marsha</span>
+          <span class="partner-status">
+            I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</span>
+        </li>
+        <li class="partner-item">
+          <div class="partner-photo partner-photo-second">
+          </div>
+          <span class="partner-name">Heather Walker</span>
+          <span class="partner-status">
+            I'm a happy person that loves cats and climbing on mountains.</span>
+        </li>
+        <li class="partner-item">
+          <div class="partner-photo partner-photo-third">
+          </div>
+          <span class="partner-name">Heather Walker</span>
+          <span class="partner-status">
+            Based in Chicago. I love playing tennis and loud music.</span>
+        </li>
+        <li class="partner-item">
+          <div class="partner-photo partner-photo-fourth">
+          </div>
+          <span class="partner-name">Bradley Hunter</span>
+          <span class="partner-status">
+            Based in Chicago. I love playing tennis and loud music.</span>
+        </li>
+      </ul>
+      
+      <button class="partner-btn">See other partners</button>
+    </section>
+  </main>
 
 </body>
 </html>
