--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -114,12 +114,11 @@
               <div class="team-card">
                 <ul class="social-list">
                   <li class="social-item">
-                    <a href="" class="social-link"
-                      ><img
-                        src="./img/icons/facebook-1.png"
-                        alt="Fb"
-                        class="social-img"
-                    /></a>
+                    <a href="" class="social-link">
+                    <svg>
+                      <use href="./img/icons/sprite.svg#facebook"></use>
+                    </svg>
+                    </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link"
